airflow/logs/open_aq/store_data/2021-06-29T16:38:33.458784+00:00/8.log
[2021-06-29 16:50:03,804] {taskinstance.py:876} INFO - Dependencies all met for <TaskInstance: open_aq.store_data 2021-06-29T16:38:33.458784+00:00 [queued]>
[2021-06-29 16:50:03,828] {taskinstance.py:876} INFO - Dependencies all met for <TaskInstance: open_aq.store_data 2021-06-29T16:38:33.458784+00:00 [queued]>
[2021-06-29 16:50:03,828] {taskinstance.py:1067} INFO - 
--------------------------------------------------------------------------------
[2021-06-29 16:50:03,828] {taskinstance.py:1068} INFO - Starting attempt 8 of 8
[2021-06-29 16:50:03,829] {taskinstance.py:1069} INFO - 
--------------------------------------------------------------------------------
[2021-06-29 16:50:03,841] {taskinstance.py:1087} INFO - Executing <Task(PythonOperator): store_data> on 2021-06-29T16:38:33.458784+00:00
[2021-06-29 16:50:03,848] {standard_task_runner.py:52} INFO - Started process 37876 to run task
[2021-06-29 16:50:03,854] {standard_task_runner.py:76} INFO - Running: ['airflow', 'tasks', 'run', 'open_aq', 'store_data', '2021-06-29T16:38:33.458784+00:00', '--job-id', '686', '--pool', 'default_pool', '--raw', '--subdir', 'DAGS_FOLDER/open_aq.py', '--cfg-path', '/tmp/tmpr5phr9cy', '--error-file', '/tmp/tmpa8ds8u5i']
[2021-06-29 16:50:03,856] {standard_task_runner.py:77} INFO - Job 686: Subtask store_data
[2021-06-29 16:50:03,949] {logging_mixin.py:104} INFO - Running <TaskInstance: open_aq.store_data 2021-06-29T16:38:33.458784+00:00 [running]> on host airflowvm
[2021-06-29 16:50:04,061] {taskinstance.py:1280} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=airflow
AIRFLOW_CTX_DAG_ID=open_aq
AIRFLOW_CTX_TASK_ID=store_data
AIRFLOW_CTX_EXECUTION_DATE=2021-06-29T16:38:33.458784+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2021-06-29T16:38:33.458784+00:00
[2021-06-29 16:50:04,079] {base.py:69} INFO - Using connection to: id: ***_default. Host: localhost, Port: 5432, Schema: , Login: ***, Password: ***, extra: {'cursor': 'realdictcursor'}
[2021-06-29 16:50:04,089] {taskinstance.py:1481} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/sandbox/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1137, in _run_raw_task
    self._prepare_and_execute_task_with_callbacks(context, task)
  File "/home/airflow/sandbox/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1311, in _prepare_and_execute_task_with_callbacks
    result = self._execute_task(context, task_copy)
  File "/home/airflow/sandbox/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1341, in _execute_task
    result = task_copy.execute(context=context)
  File "/home/airflow/sandbox/lib/python3.8/site-packages/airflow/operators/python.py", line 150, in execute
    return_value = self.execute_callable()
  File "/home/airflow/sandbox/lib/python3.8/site-packages/airflow/operators/python.py", line 161, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/home/airflow/airflow/dags/open_aq.py", line 59, in _storing
    cur.copy_expert(sql = copy_sql, file = f)
psycopg2.errors.SyntaxError: syntax error at or near "READER"
LINE 1: ...aq FROM '/tmp/processed_data.csv' DELIMITER ';' CSV READER; 
                                                               ^

[2021-06-29 16:50:04,091] {taskinstance.py:1524} INFO - Marking task as FAILED. dag_id=open_aq, task_id=store_data, execution_date=20210629T163833, start_date=20210629T165003, end_date=20210629T165004
[2021-06-29 16:50:04,150] {local_task_job.py:151} INFO - Task exited with return code 1
